--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,53 @@
   </head>
   <body>
     <div id="root"></div>
+    <div class="testcard">
+      <div class="overlay"></div>
+      <div class="card"></div>
+    </div>
   </body>
 </html>
+<style>
+  .testcard{
+    width: 550px;
+    height: 510px;
+  }
+  .card{
+    width: 100%;
+    height: 100%;
+    
+    background-image: url('testview.jpg');
+    background-size: cover;
+    
+  }
+  .overlay{
+    position : absolute;
+    width: 550px;
+    height: 510px;
+    background : linear-gradient(105deg,
+    transparent 40%,
+    rgba(255,219,112,0.8) 45%,
+    rgba(132, 50, 255 ,0.6) 50%,
+    transparent 54% );
+    filter: brightness(1.2) opacity(0.8);
+    mix-blend-mode: color-dodge;
+    background-size: 150% 150%;
+    background-position:  100%;
+  }
+</style>
+
+<script>
+var continer = document.querySelector('.testcard');
+var overlay = document.querySelector('.overlay');
+
+continer.addEventListener('mousemove', function(pos){
+  var x = pos.offsetX;
+  var y = pos.offsetY;
+  //console.log(x,y);
+  var rotatY = -1/20 * x + 20; 
+  var rotatX = -1/20 * y + 20; 
+  overlay.style = `background-position : ${x/10 + y/10}%`;
+  continer.style = `transform : perspective(300px) rotateY(${rotatY}deg) rotateX(${rotatX}deg)`;
+ 
+})
+</script>
